030-software/fluxcd/apps/deluge/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: deluge
  labels:
    routed-gateway: "true"
