030-software/fluxcd/apps/deluge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
  annotations:
    configmap.reloader.stakater.com/reload: "settings,scripts,pod-gateway"
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
        policy.gatekeeper.sh/ignore: "true"
      annotations:
        routed-gateway: "true"
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: deluge
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: deluge
      containers:
      - name: deluge
        image: lscr.io/linuxserver/deluge:2.2.0
        # securityContext:
        #   allowPrivilegeEscalation: false
        #   readOnlyRootFilesystem: true
        #   runAsNonRoot: true
        #   capabilities:
        #     drop:
        #       - ALL
        ports:
        - name: http
          containerPort: 8112
          protocol: TCP
        - name: daemon
          containerPort: 58846
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads/complete
          name: nfs-downloads
        - mountPath: /watch
          name: nfs-shared
        - mountPath: /config/core.conf
          name: settings
          subPath: core.conf
        - mountPath: /config/web.conf
          name: settings
          subPath: web.conf
        - mountPath: /config/autoadd.conf
          name: settings
          subPath: autoadd.conf
        - mountPath: /config/hostlist.conf
          name: settings
          subPath: hostlist.conf
        - mountPath: /config/auth
          name: creds
          subPath: auth
          readOnly: true
        - mountPath: /tmp
          name: temp
        startupProbe:
          tcpSocket:
            port: http
        livenessProbe:
          tcpSocket:
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources:
          limits:
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: nfs-downloads
        nfs:
          path: /deluge
          server: 10.102.22.211
      - name: nfs-shared
        nfs:
          path: /shared/watch
          server: genji.home.arpa
      - configMap:
          defaultMode: 0755
          name: scripts
        name: scripts
      - configMap:
          name: settings
        name: settings
      - name: creds
        secret:
          secretName: auth
      - name: temp
        emptyDir: {}
