030-software/fluxcd/apps/deluge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deluge
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 58846
      targetPort: daemon
      protocol: TCP
      name: daemon
  selector:
    app: deluge
