030-software/fluxcd/apps/deluge/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deluge
  annotations:
    dashboard.${domain}/icon: magnet
    dashboard.${domain}/name: deluge
    dashboard.${domain}/url: https://deluge.${domain}
spec:
  hostnames:
    - deluge.${domain}
  parentRefs:
    - name: cilium
      namespace: cilium
  rules:
    - backendRefs:
        - name: deluge
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
